feat: 회원 탈퇴 및 강제 탈퇴 기능 추가
- 마이페이지 설정에 회원 탈퇴 탭 추가
- 관리자 멤버 관리에 강제 탈퇴 기능 추가
- Service Role Key를 사용한 완전한 계정 삭제 API 구현
- 강제 탈퇴된 사용자 자동 로그아웃 처리 (포커스/주기적 체크)
- 이메일 미인증 사용자 알림 배너 추가
- 인증 메일 재발송 기능 및 rate limit 에러 처리

--- a/.env.local.example
+++ b/.env.local.example
@@ -1,6 +1,7 @@
 # Supabase
 NEXT_PUBLIC_SUPABASE_URL=https://example.com
 NEXT_PUBLIC_SUPABASE_ANON_KEY=supabase.key
+SUPABASE_SERVICE_ROLE_KEY=SUPABASE_SERVICE_ROLE_KEY
 
 # YouTube Data API
 YOUTUBE_API_KEY=your_youtube_api_key
