썸네일 수정 및 og데이터 넣음

--- a/.env.local.example
+++ b/.env.local.example
@@ -5,3 +5,6 @@ SUPABASE_SERVICE_ROLE_KEY=SUPABASE_SERVICE_ROLE_KEY
 
 # YouTube Data API
 YOUTUBE_API_KEY=your_youtube_api_key
+
+# Site URL (for Open Graph meta tags)
+NEXT_PUBLIC_SITE_URL=https://your-domain.com
