Resend 기반 이메일 인증 기능 추가

--- a/.env.local.example
+++ b/.env.local.example
@@ -1,10 +1,10 @@
 # Supabase
-NEXT_PUBLIC_SUPABASE_URL=https://example.com
-NEXT_PUBLIC_SUPABASE_ANON_KEY=supabase.key
-SUPABASE_SERVICE_ROLE_KEY=SUPABASE_SERVICE_ROLE_KEY
-
+NEXT_PUBLIC_SUPABASE_URL=NEXT_PUBLIC_SUPABASE_URL
+NEXT_PUBLIC_SUPABASE_ANON_KEY=NEXT_PUBLIC_SUPABASE_ANON_KEY
+# Site URL (Supabase redirect용)
+NEXT_PUBLIC_SITE_URL=NEXT_PUBLIC_SITE_URL
 # YouTube Data API
-YOUTUBE_API_KEY=your_youtube_api_key
-
-# Site URL (for Open Graph meta tags)
-NEXT_PUBLIC_SITE_URL=https://your-domain.com
+YOUTUBE_API_KEY=YOUTUBE_API_KEY
+# Resend (이메일 인증)
+RESEND_API_KEY=RESEND_API_KEY
+EMAIL_FROM=EMAIL_FROM
