--- a/.env.local.example
+++ b/.env.local.example
@@ -1,6 +1,7 @@
 # Supabase
 NEXT_PUBLIC_SUPABASE_URL=NEXT_PUBLIC_SUPABASE_URL
 NEXT_PUBLIC_SUPABASE_ANON_KEY=NEXT_PUBLIC_SUPABASE_ANON_KEY
+SUPABASE_SERVICE_ROLE_KEY=SUPABASE_SERVICE_ROLE_KEY
 # Site URL (Supabase redirect용)
 NEXT_PUBLIC_SITE_URL=NEXT_PUBLIC_SITE_URL
 # YouTube Data API
