--- a/.env.local.example
+++ b/.env.local.example
@@ -6,6 +6,10 @@ SUPABASE_SERVICE_ROLE_KEY=SUPABASE_SERVICE_ROLE_KEY
 NEXT_PUBLIC_SITE_URL=NEXT_PUBLIC_SITE_URL
 # YouTube Data API
 YOUTUBE_API_KEY=YOUTUBE_API_KEY
-# Resend (이메일 인증)
-RESEND_API_KEY=RESEND_API_KEY
+# SMTP (이메일 인증 - Nodemailer)
+SMTP_HOST=SMTP_HOST
+SMTP_PORT=587
+SMTP_SECURE=false
+SMTP_USER=SMTP_USER
+SMTP_PASS=SMTP_PASS
 EMAIL_FROM=EMAIL_FROM
